--- a/TypeScript.NET.tests/Typescript.NET.Tests.vcxproj.filters
+++ b/TypeScript.NET.tests/Typescript.NET.Tests.vcxproj.filters
@@ -13,44 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Resource Files\Typescript">
-      <UniqueIdentifier>{44142c03-8da8-4b11-aa51-69963f98637f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\C#">
-      <UniqueIdentifier>{fac050c3-f393-45fc-899f-a12af0112a4f}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LexicalAnalyzer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Grammar.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h">
+    <ClInclude Include="LexerTests.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="LexicalAnalyzer.h">
+    <ClInclude Include="GrammarTests.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Token.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Utilities.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Grammar.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Sample.ts">
-      <Filter>Resource Files\Typescript</Filter>
-    </None>
   </ItemGroup>
 </Project>
