Implemented computation of LR(1) items, goto tables, action table aaaand... PARSING, IT'S ALIVE AND KICKING

--- a/TypeScript.NET/TypeScript.NET.vcxproj.filters
+++ b/TypeScript.NET/TypeScript.NET.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Grammar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Parser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
