--- a/TypeScript.NET/TypeScript.NET.vcxproj
+++ b/TypeScript.NET/TypeScript.NET.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="LexicalAnalyzer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Grammar.cpp" />
+    <ClCompile Include="Parser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Sample.ts" />
@@ -74,6 +75,7 @@
   <ItemGroup>
     <ClInclude Include="LexicalAnalyzer.h" />
     <ClInclude Include="Grammar.h" />
+    <ClInclude Include="Parser.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Token.h" />
     <ClInclude Include="Utilities.h" />
