--- a/TypeScript.NET/TypeScript.NET.vcxproj.filters
+++ b/TypeScript.NET/TypeScript.NET.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Parser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TsToCSharp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Parser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TsToCSharp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
