Parser's grammar greatly enhanced. SDT improved. Compiler can now be called trough cmd

--- a/TypeScript.NET/TypeScript.NET.vcxproj.filters
+++ b/TypeScript.NET/TypeScript.NET.vcxproj.filters
@@ -61,7 +61,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Sample.ts">
+    <None Include="SampleTS">
       <Filter>Resource Files\Typescript</Filter>
     </None>
   </ItemGroup>
